kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empower-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: empower-api
  template:
    metadata:
      labels:
        app: empower-api
    spec:
      containers:
      - name: empower-api
        image: nginx:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 30
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 30
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            memory: "800Mi"
            cpu: "800m"
          requests:
            memory: "600Mi"
            cpu: "400m"
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_TIME
          runAsUser: 1000
          allowPrivilegeEscalation: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
