kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: empower-api-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
